--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
     "firebase": "^11.6.0",
+    "groq-sdk": "^0.37.0",
     "mime-types": "^3.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
